# GiTerminal

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  run  run.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  RELEASE.md  USAGE.md
git_terminal/: __init__.py  app.py  language_config.json
git_terminal/core/: commands.py  encoding.py  models.py  runner.py
git_terminal/ui/: commit_graph.py  main_window.py  theme.py  vscode_shell.py  workers.py
scripts/: check_project.py
src/git_terminal/: __init__.py  i18n.py  language_config.json
src/git_terminal/core/: runner.py  safety.py
src/git_terminal/ui/: theme.py
tests/: test_runner_workflows.py  test_safety.py
