[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-terminal"
version = "0.4.2"
description = "A PyQt6 desktop Git management terminal built on top of the native Git CLI."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Git Terminal contributors" }
]
license = { text = "LicenseRef-Unspecified" }
keywords = ["git", "pyqt6", "desktop", "terminal", "gui"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: X11 Applications :: Qt",
  "Environment :: Win32 (MS Windows)",
  "Environment :: MacOS X",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
  "PyQt6>=6.6",
  "requests>=2.31",
  "keyring>=24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "build>=1.2",
  "twine>=5.0",
]

[project.scripts]
git-terminal = "git_terminal.app:main"

[project.gui-scripts]
git-terminal-gui = "git_terminal.app:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
git_terminal = [
  "language_config.json",
  "assets/*.svg",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []
